Prevent some white space wrapping on index page.

--- a/styles/Page.module.scss
+++ b/styles/Page.module.scss
@@ -44,6 +44,10 @@ $sidebarWidth: 178px;
   }
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .pageContent {
   grid-area: c;
   color: white;
